   + Fix 0.90 OpenBSD build error
   + Fix 0.90 cache bug that could cause "verify local files" to fail.
   + Ensure only a single "?" is used for appending arguments to the announce and scrape URL
- OS X:
   + Fix a crash caused by custom sound files
   + Add Dutch localization, re-add Russian localization, fix Korean localization
- gtk:
   + Fix 0.90 packaging errors

0.90 (2007/10/23)
 - Encryption support, with option to ignore unencrypted peers
 - Ban peers that send too much bad data
 - Only report downloaded, verified good pieces in tracker `download' field
 - Improved compliance with BitTorrent spec
 - MSE Tracker Extension support
 - Significant rewrite of the libtransmission back-end
 - Icon enhanced to support size of 512 x 512
 - OS X:
   + Per-torrent action menu
   + Redesigned inspector with additional statistics and ability to be resized vertically in Peers and Files tabs
   + Redesigned message log
   + Optimizations to decrease memory usage
   + Sort and filter by tracker
   + Various smaller interface additions and improvements
 - GTK:
   + Various interface improvements
   + Better compliance with the Gnome interface guidelines

0.82 (2007/09/09)
 - Fixed bug that could limit transfer speeds
 - Fixed bug that corrupted torrents > 4 GB
 - Fixed bug that could allow bad peers to send too many pieces
 - For peers supporting both Azureus's and LibTorrent's extensions, allow negotiation to decide which to use
 - Other minor fixes

0.81 (2007/08/22)
 - Fix 0.80 assertion crashes
 - Fix a bug that miscounted how many peers Transmission wants connected
 - Correct incorrect error messages
 - Memory leaks fixed
 - OS X:
   + Multiple fixes to creating torrents and adding new torrents
   + Updated Russian and Spanish translations
 - GTK:
   + Updated Dutch, Portuguese, French, and Slovakian translations
 - CLI:
   + Better support for cli-driven torrent creation
   + Fix a bug that misparsed command-line arguments

0.80 (2007/08/07)